--- a/python/examples/dspy-rag-fastapi/evaluation/evaluate.ipynb
+++ b/python/examples/dspy-rag-fastapi/evaluation/evaluate.ipynb
@@ -24,6 +24,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Run async evaluation in the notebook\n",
     "import nest_asyncio\n",
     "\n",
     "nest_asyncio.apply()"
@@ -138,17 +139,11 @@
    "source": [
     "from phoenix.trace import DocumentEvaluations, SpanEvaluations\n",
     "\n",
+    "# Log the evaluations back to\n",
     "client.log_evaluations(DocumentEvaluations(dataframe=relevance_evals, eval_name=\"relevance\"),\n",
     "                       SpanEvaluations(dataframe=qa_evals, eval_name=\"qa\"),\n",
     "                       SpanEvaluations(dataframe=hallucination_evals, eval_name=\"hallucination\"))"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
