Added type annotations in __init__.py

--- a/python/instrumentation/openinference-instrumentation-litellm/guides/client_demo.ipynb
+++ b/python/instrumentation/openinference-instrumentation-litellm/guides/client_demo.ipynb
@@ -26,7 +26,7 @@
      "output_type": "stream",
      "text": [
       "WARNING: All log messages before absl::InitializeLog() is called are written to STDERR\n",
-      "I0000 00:00:1722219805.563712  614905 config.cc:230] gRPC experiments enabled: call_status_override_on_cancellation, event_engine_dns, event_engine_listener, http2_stats_fix, monitoring_experiment, pick_first_new, trace_record_callops, work_serializer_clears_time_cache\n"
+      "I0000 00:00:1722220930.637031  626003 config.cc:230] gRPC experiments enabled: call_status_override_on_cancellation, event_engine_dns, event_engine_listener, http2_stats_fix, monitoring_experiment, pick_first_new, trace_record_callops, work_serializer_clears_time_cache\n"
      ]
     }
    ],
@@ -92,14 +92,14 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "I0000 00:00:1722219815.237355  614810 work_stealing_thread_pool.cc:320] WorkStealingThreadPoolImpl::PrepareFork\n",
-      "I0000 00:00:1722219815.237594  614810 fork_posix.cc:77] Other threads are currently calling into gRPC, skipping fork() handlers\n"
+      "I0000 00:00:1722220937.284050  625893 work_stealing_thread_pool.cc:320] WorkStealingThreadPoolImpl::PrepareFork\n",
+      "I0000 00:00:1722220937.284228  625893 fork_posix.cc:77] Other threads are currently calling into gRPC, skipping fork() handlers\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "ModelResponse(id='chatcmpl-9qAKtEz8A3qiIt6cTjesfdiynMnmh', choices=[Choices(finish_reason='stop', index=0, message=Message(content='The capital of China is Beijing.', role='assistant', tool_calls=None, function_call=None))], created=1722219815, model='gpt-3.5-turbo-0125', object='chat.completion', system_fingerprint=None, usage=Usage(completion_tokens=7, prompt_tokens=14, total_tokens=21))"
+       "ModelResponse(id='chatcmpl-9qAczdxnOMvkHnvoPJ1npTxIknZvg', choices=[Choices(finish_reason='stop', index=0, message=Message(content='Beijing', role='assistant', tool_calls=None, function_call=None))], created=1722220937, model='gpt-3.5-turbo-0125', object='chat.completion', system_fingerprint=None, usage=Usage(completion_tokens=2, prompt_tokens=14, total_tokens=16))"
       ]
      },
      "execution_count": 4,
@@ -121,7 +121,7 @@
     {
      "data": {
       "text/plain": [
-       "ModelResponse(id='chatcmpl-9qAKumkHc1Qr1vBBOV0AbvpGpjlRF', choices=[Choices(finish_reason='stop', index=0, message=Message(content='Great! What type of pie are you thinking of making? Apple, pumpkin, cherry, or another flavor?', role='assistant', tool_calls=None, function_call=None))], created=1722219816, model='gpt-3.5-turbo-0125', object='chat.completion', system_fingerprint=None, usage=Usage(completion_tokens=22, prompt_tokens=42, total_tokens=64))"
+       "ModelResponse(id='chatcmpl-9qAd1WRS2KNBMIb1u7rWtv2or7CC7', choices=[Choices(finish_reason='stop', index=0, message=Message(content='Oh, I see! What type of pie are you thinking of making? I can help you find a recipe for that as well.', role='assistant', tool_calls=None, function_call=None))], created=1722220939, model='gpt-3.5-turbo-0125', object='chat.completion', system_fingerprint=None, usage=Usage(completion_tokens=27, prompt_tokens=42, total_tokens=69))"
       ]
      },
      "execution_count": 5,
@@ -149,14 +149,14 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "I0000 00:00:1722219816.474385  614810 work_stealing_thread_pool.cc:320] WorkStealingThreadPoolImpl::PrepareFork\n",
-      "I0000 00:00:1722219816.474543  614810 fork_posix.cc:77] Other threads are currently calling into gRPC, skipping fork() handlers\n"
+      "I0000 00:00:1722220939.762190  625893 work_stealing_thread_pool.cc:320] WorkStealingThreadPoolImpl::PrepareFork\n",
+      "I0000 00:00:1722220939.762316  625893 fork_posix.cc:77] Other threads are currently calling into gRPC, skipping fork() handlers\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "ModelResponse(id='chatcmpl-9qAKu2r2eozNPrjTOUt34rW1IYZeK', choices=[Choices(finish_reason='length', index=0, message=Message(content='Great! What kind of pie are you thinking of making? Apple pie, pecan pie, pumpkin', role='assistant', tool_calls=None, function_call=None))], created=1722219816, model='gpt-3.5-turbo-0125', object='chat.completion', system_fingerprint=None, usage=Usage(completion_tokens=20, prompt_tokens=42, total_tokens=62))"
+       "ModelResponse(id='chatcmpl-9qAd20H69IKm30K0otGgP8ZEaXyyw', choices=[Choices(finish_reason='length', index=0, message=Message(content='Got it! What type of pie are you looking to make? Apple, pumpkin, pecan,', role='assistant', tool_calls=None, function_call=None))], created=1722220940, model='gpt-3.5-turbo-0125', object='chat.completion', system_fingerprint=None, usage=Usage(completion_tokens=20, prompt_tokens=42, total_tokens=62))"
       ]
      },
      "execution_count": 6,
@@ -184,7 +184,7 @@
     {
      "data": {
       "text/plain": [
-       "ModelResponse(id='chatcmpl-9qAKvDKaAkhy3XOTy0Qp6X8yEBwOu', choices=[Choices(finish_reason='stop', index=0, message=Message(content='As of November 2021, the highest grossing film of all time is \"Avengers: Endgame\" (2019) directed by Anthony and Joe Russo, with a worldwide box office gross of over $2.798 billion.', role='assistant', tool_calls=None, function_call=None))], created=1722219817, model='gpt-3.5-turbo-0125', object='chat.completion', system_fingerprint=None, usage=Usage(completion_tokens=48, prompt_tokens=15, total_tokens=63))"
+       "ModelResponse(id='chatcmpl-9qAd2tlNEKRzOagNu7uOb5SygQVLU', choices=[Choices(finish_reason='stop', index=0, message=Message(content='As of now, the highest grossing film ever is Avengers: Endgame, which grossed over $2.798 billion worldwide.', role='assistant', tool_calls=None, function_call=None))], created=1722220940, model='gpt-3.5-turbo-0125', object='chat.completion', system_fingerprint=None, usage=Usage(completion_tokens=27, prompt_tokens=15, total_tokens=42))"
       ]
      },
      "execution_count": 7,
@@ -247,7 +247,7 @@
     {
      "data": {
       "text/plain": [
-       "ImageResponse(created=1722219827, data=[{'b64_json': None, 'revised_prompt': None, 'url': 'https://oaidalleapiprodscus.blob.core.windows.net/private/org-BbTPJCaZn15AHWabDLEhr6Zd/user-yOf3YhCIEb08AQU8TwPBEMcf/img-tzUNQv9ypuJbIMWhEvw8LS4d.png?st=2024-07-29T01%3A23%3A47Z&se=2024-07-29T03%3A23%3A47Z&sp=r&sv=2023-11-03&sr=b&rscd=inline&rsct=image/png&skoid=6aaadede-4fb3-4698-a8f6-684d7786b067&sktid=a48cca56-e6da-484e-a814-9c849652bcb3&skt=2024-07-28T23%3A55%3A08Z&ske=2024-07-29T23%3A55%3A08Z&sks=b&skv=2023-11-03&sig=A886UlP6pt9/FWocjKmWEyr80fzRujB8ECPLbdsn%2BJU%3D'}], usage={'prompt_tokens': 0, 'completion_tokens': 0, 'total_tokens': 0})"
+       "ImageResponse(created=1722220953, data=[{'b64_json': None, 'revised_prompt': None, 'url': 'https://oaidalleapiprodscus.blob.core.windows.net/private/org-BbTPJCaZn15AHWabDLEhr6Zd/user-yOf3YhCIEb08AQU8TwPBEMcf/img-WvytRwkS8ucvOF1xuOiyPlRD.png?st=2024-07-29T01%3A42%3A33Z&se=2024-07-29T03%3A42%3A33Z&sp=r&sv=2023-11-03&sr=b&rscd=inline&rsct=image/png&skoid=6aaadede-4fb3-4698-a8f6-684d7786b067&sktid=a48cca56-e6da-484e-a814-9c849652bcb3&skt=2024-07-29T00%3A07%3A29Z&ske=2024-07-30T00%3A07%3A29Z&sks=b&skv=2023-11-03&sig=ZEJXVR%2BWbKK9n%2BUPCe4XbZAFKUnedc5%2BCnoaD0u9o8E%3D'}], usage={'prompt_tokens': 0, 'completion_tokens': 0, 'total_tokens': 0})"
       ]
      },
      "execution_count": 10,
@@ -267,7 +267,7 @@
     {
      "data": {
       "text/plain": [
-       "ImageResponse(created=1722219836, data=[{'b64_json': None, 'revised_prompt': None, 'url': 'https://oaidalleapiprodscus.blob.core.windows.net/private/org-BbTPJCaZn15AHWabDLEhr6Zd/user-yOf3YhCIEb08AQU8TwPBEMcf/img-wD5OiqgKCbM428nQ1fHI53vb.png?st=2024-07-29T01%3A23%3A56Z&se=2024-07-29T03%3A23%3A56Z&sp=r&sv=2023-11-03&sr=b&rscd=inline&rsct=image/png&skoid=6aaadede-4fb3-4698-a8f6-684d7786b067&sktid=a48cca56-e6da-484e-a814-9c849652bcb3&skt=2024-07-28T22%3A22%3A01Z&ske=2024-07-29T22%3A22%3A01Z&sks=b&skv=2023-11-03&sig=xeEdGp6OTENZHOtGepMV4xt6aoRgt38xh%2B4ii0Doh/I%3D'}], usage={'prompt_tokens': 0, 'completion_tokens': 0, 'total_tokens': 0})"
+       "ImageResponse(created=1722220962, data=[{'b64_json': None, 'revised_prompt': None, 'url': 'https://oaidalleapiprodscus.blob.core.windows.net/private/org-BbTPJCaZn15AHWabDLEhr6Zd/user-yOf3YhCIEb08AQU8TwPBEMcf/img-e8x6ETAkHrroKuy5yI7DFBFt.png?st=2024-07-29T01%3A42%3A42Z&se=2024-07-29T03%3A42%3A42Z&sp=r&sv=2023-11-03&sr=b&rscd=inline&rsct=image/png&skoid=6aaadede-4fb3-4698-a8f6-684d7786b067&sktid=a48cca56-e6da-484e-a814-9c849652bcb3&skt=2024-07-28T23%3A26%3A42Z&ske=2024-07-29T23%3A26%3A42Z&sks=b&skv=2023-11-03&sig=8T3nCkpf2zoz08S8r%2BVCb%2BVFMH1JVBmaH7dCi%2BL6Ntg%3D'}], usage={'prompt_tokens': 0, 'completion_tokens': 0, 'total_tokens': 0})"
       ]
      },
      "execution_count": 11,
@@ -296,7 +296,7 @@
     {
      "data": {
       "text/plain": [
-       "ModelResponse(id='chatcmpl-9qALZCfFUjspFeMtm49CohuDjOH0g', choices=[Choices(finish_reason='stop', index=0, message=Message(content='Great! I can provide you with a recipe for pie. What type of pie are you interested in making? Apple pie, pumpkin pie, pecan pie, or something else?', role='assistant', tool_calls=None, function_call=None))], created=1722219857, model='gpt-3.5-turbo-0125', object='chat.completion', system_fingerprint=None, usage=Usage(completion_tokens=36, prompt_tokens=42, total_tokens=78))"
+       "ModelResponse(id='chatcmpl-9qAdxGggsr3dM5TlTht5UUegkDkI6', choices=[Choices(finish_reason='stop', index=0, message=Message(content='Great! What type of pie are you thinking of making? I can help you find a recipe for that as well.', role='assistant', tool_calls=None, function_call=None))], created=1722220997, model='gpt-3.5-turbo-0125', object='chat.completion', system_fingerprint=None, usage=Usage(completion_tokens=24, prompt_tokens=42, total_tokens=66))"
       ]
      },
      "execution_count": 13,
@@ -348,7 +348,7 @@
     {
      "data": {
       "text/plain": [
-       "ModelResponse(id='chatcmpl-9qALhXOljQ20TYqnEFYpgsakcZ6VJ', choices=[Choices(finish_reason='stop', index=0, message=Message(content='Got it! What kind of pie are you looking to make? Apple, pumpkin, pecan, or something else?', role='assistant', tool_calls=None, function_call=None))], created=1722219865, model='gpt-3.5-turbo-0125', object='chat.completion', system_fingerprint=None, usage=Usage(completion_tokens=24, prompt_tokens=42, total_tokens=66))"
+       "ModelResponse(id='chatcmpl-9qAe5Nki3QnFNTbSBaXSQwMhOwYra', choices=[Choices(finish_reason='stop', index=0, message=Message(content='Great! What kind of pie would you like to make? Apple, cherry, pumpkin, or something else?', role='assistant', tool_calls=None, function_call=None))], created=1722221005, model='gpt-3.5-turbo-0125', object='chat.completion', system_fingerprint=None, usage=Usage(completion_tokens=22, prompt_tokens=42, total_tokens=64))"
       ]
      },
      "execution_count": 15,
