Added prompt flow example that exports traces to Arize, also renamed demo notebooks

--- a/python/instrumentation/openinference-instrumentation-promptflow/examples/chat_flow_example_to_arize.ipynb
+++ b/python/instrumentation/openinference-instrumentation-promptflow/examples/chat_flow_example_to_arize.ipynb
@@ -4,14 +4,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Tutorial for using Prompt flow and sending traces to Phoenix"
+    "## Tutorial for using Prompt flow and sending traces to Arize AI"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Import Phoenix and other dependencies required for setup."
+    "Import arize_otel and other dependencies required for setup."
    ]
   },
   {
@@ -21,7 +21,7 @@
    "outputs": [],
    "source": [
     "import os\n",
-    "import phoenix as px\n",
+    "from arize_otel import register_otel, Endpoints\n",
     "from opentelemetry.sdk.environment_variables import OTEL_EXPORTER_OTLP_ENDPOINT\n",
     "from promptflow.tracing._start_trace import setup_exporter_from_environ"
    ]
@@ -30,7 +30,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Launch the Phoenix UI."
+    "Set up OpenTelemetry using our convenience function: register_otel with your Arize credentials."
    ]
   },
   {
@@ -39,14 +39,20 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "session = px.launch_app()"
+    "# Setup OTEL via our convenience function\n",
+    "register_otel(\n",
+    "    endpoints = Endpoints.ARIZE,\n",
+    "    space_key = \"INSERT_YOUR_ARIZE_SPACE_KEY_HERE\", # in app space settings page\n",
+    "    api_key = \"INSERT_YOUR_ARIZE_API_KEY_HERE\", # in app space settings page\n",
+    "    model_id = \"test-prompt-flow-chat\", # name this to whatever you would like\n",
+    ")"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Then set up the OpenTelemetry endpoint to be Phoenix and use Prompt flow's setup_exporter_from_environ to start tracing any further flows and LLM calls."
+    "Then set up the OpenTelemetry endpoint to be Arize and use Prompt flow's setup_exporter_from_environ to start tracing any further flows and LLM calls."
    ]
   },
   {
@@ -55,8 +61,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "endpoint = f\"http://127.0.0.1:6006/v1/traces\"\n",
-    "os.environ[OTEL_EXPORTER_OTLP_ENDPOINT] = endpoint\n",
+    "os.environ[OTEL_EXPORTER_OTLP_ENDPOINT] = Endpoints.ARIZE\n",
     "setup_exporter_from_environ()"
    ]
   },
@@ -133,7 +138,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Create your Chat Flow and see the traces rendered in Phoenix!"
+    "Create your Chat Flow and see the traces rendered in Arize!"
    ]
   },
   {
@@ -147,7 +152,7 @@
     "# create a chatFlow obj with connection\n",
     "chat_flow = ChatFlow(config)\n",
     "# run the flow as function, which will be recorded in the trace\n",
-    "result = chat_flow(question=\"What is ChatGPT? Please explain with consise statement\")\n",
+    "result = chat_flow(question=\"What is ChatGPT? Please explain with concise statement\")\n",
     "result"
    ]
   }
@@ -159,15 +164,7 @@
    "name": "python3"
   },
   "language_info": {
-   "codemirror_mode": {
-    "name": "ipython",
-    "version": 3
-   },
-   "file_extension": ".py",
-   "mimetype": "text/x-python",
    "name": "python",
-   "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
    "version": "3.11.9"
   }
  },
