Added markdown comments to demo to increase readability

--- a/python/instrumentation/openinference-instrumentation-litellm/guides/client_demo.ipynb
+++ b/python/instrumentation/openinference-instrumentation-litellm/guides/client_demo.ipynb
@@ -1,6 +1,22 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Demo to instrument LiteLLM calls and send their spans to our Phoenix collector"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Import Phoenix, OTel, and other dependencies. \n",
+    "Get your API Key from an .env file.\n",
+    "Launch the Phoenix app and send the endpoint to be the Phoenix collector."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -31,6 +47,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "No need to run below cell if you have done ```pip install openinference-instrumentation-litellm``` already"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -49,6 +72,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Set up our LiteLLM instrumentor with just 2 lines!"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -56,6 +86,13 @@
    "source": [
     "from openinference.instrumentation.litellm import LiteLLMInstrumentor\n",
     "LiteLLMInstrumentor().instrument(tracer_provider=tracer_provider)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Make calls to LiteLLM functions as usual. You will see their spans in the Phoenix UI."
    ]
   },
   {
@@ -151,6 +188,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Now uninstrument LiteLLM calls and see how you will no longer see traces for the calls in the following cells until instrumented again."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -181,6 +225,13 @@
     "                      { \"content\": \"No actually I want to make a pie\",\"role\": \"user\"},],\n",
     "            temperature=0.7\n",
     "        )"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Now instrument again, and you will see traces in the Phoenix UI."
    ]
   },
   {
