--- a/python/instrumentation/openinference-instrumentation-litellm/guides/client_demo.ipynb
+++ b/python/instrumentation/openinference-instrumentation-litellm/guides/client_demo.ipynb
@@ -32,7 +32,7 @@
     "load_dotenv()\n",
     "\n",
     "# Get the secret key from environment variables\n",
-    "openai_api_key = os.getenv('OPENAI_API_KEY')\n",
+    "openai_api_key = os.getenv(\"OPENAI_API_KEY\")\n",
     "\n",
     "\n",
     "session = px.launch_app()\n",
@@ -64,11 +64,11 @@
     "import os\n",
     "\n",
     "# Determine the absolute path to the 'src' directory\n",
-    "package_path = os.path.abspath(os.path.join(os.getcwd(), '..', 'src'))\n",
+    "package_path = os.path.abspath(os.path.join(os.getcwd(), \"..\", \"src\"))\n",
     "\n",
     "# Add the package path to the system path if it's not already included\n",
     "if package_path not in sys.path:\n",
-    "    sys.path.append(package_path)\n"
+    "    sys.path.append(package_path)"
    ]
   },
   {
@@ -85,6 +85,7 @@
    "outputs": [],
    "source": [
     "from openinference.instrumentation.litellm import LiteLLMInstrumentor\n",
+    "\n",
     "LiteLLMInstrumentor().instrument(tracer_provider=tracer_provider)"
    ]
   },
@@ -102,8 +103,9 @@
    "outputs": [],
    "source": [
     "# Simple single message completion call\n",
-    "litellm.completion(model=\"gpt-3.5-turbo\", \n",
-    "                   messages=[{\"content\": \"What's the capital of China?\", \"role\": \"user\"}])"
+    "litellm.completion(\n",
+    "    model=\"gpt-3.5-turbo\", messages=[{\"content\": \"What's the capital of China?\", \"role\": \"user\"}]\n",
+    ")"
    ]
   },
   {
@@ -114,12 +116,14 @@
    "source": [
     "# Multiple message conversation completion call with added param\n",
     "litellm.completion(\n",
-    "            model=\"gpt-3.5-turbo\",\n",
-    "            messages=[{ \"content\": \"Hello, I want to bake a cake\",\"role\": \"user\"},\n",
-    "                      { \"content\": \"Hello, I can pull up some recipes for cakes.\",\"role\": \"assistant\"},\n",
-    "                      { \"content\": \"No actually I want to make a pie\",\"role\": \"user\"},],\n",
-    "            temperature=0.7\n",
-    "        )\n"
+    "    model=\"gpt-3.5-turbo\",\n",
+    "    messages=[\n",
+    "        {\"content\": \"Hello, I want to bake a cake\", \"role\": \"user\"},\n",
+    "        {\"content\": \"Hello, I can pull up some recipes for cakes.\", \"role\": \"assistant\"},\n",
+    "        {\"content\": \"No actually I want to make a pie\", \"role\": \"user\"},\n",
+    "    ],\n",
+    "    temperature=0.7,\n",
+    ")"
    ]
   },
   {
@@ -130,13 +134,15 @@
    "source": [
     "# Multiple message conversation acompletion call with added params\n",
     "await litellm.acompletion(\n",
-    "            model=\"gpt-3.5-turbo\",\n",
-    "            messages=[{ \"content\": \"Hello, I want to bake a cake\",\"role\": \"user\"},\n",
-    "                      { \"content\": \"Hello, I can pull up some recipes for cakes.\",\"role\": \"assistant\"},\n",
-    "                      { \"content\": \"No actually I want to make a pie\",\"role\": \"user\"},],\n",
-    "            temperature=0.7,\n",
-    "            max_tokens=20\n",
-    "        )\n"
+    "    model=\"gpt-3.5-turbo\",\n",
+    "    messages=[\n",
+    "        {\"content\": \"Hello, I want to bake a cake\", \"role\": \"user\"},\n",
+    "        {\"content\": \"Hello, I can pull up some recipes for cakes.\", \"role\": \"assistant\"},\n",
+    "        {\"content\": \"No actually I want to make a pie\", \"role\": \"user\"},\n",
+    "    ],\n",
+    "    temperature=0.7,\n",
+    "    max_tokens=20,\n",
+    ")"
    ]
   },
   {
@@ -146,9 +152,9 @@
    "outputs": [],
    "source": [
     "litellm.completion_with_retries(\n",
-    "            model=\"gpt-3.5-turbo\",\n",
-    "            messages=[{ \"content\": \"What's the highest grossing film ever\",\"role\": \"user\"}]\n",
-    "        )"
+    "    model=\"gpt-3.5-turbo\",\n",
+    "    messages=[{\"content\": \"What's the highest grossing film ever\", \"role\": \"user\"}],\n",
+    ")"
    ]
   },
   {
@@ -157,7 +163,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "litellm.embedding(model='text-embedding-ada-002', input=[\"good morning from litellm\"])"
+    "litellm.embedding(model=\"text-embedding-ada-002\", input=[\"good morning from litellm\"])"
    ]
   },
   {
@@ -166,7 +172,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "await litellm.aembedding(model='text-embedding-ada-002', input=[\"good morning from litellm\"])"
+    "await litellm.aembedding(model=\"text-embedding-ada-002\", input=[\"good morning from litellm\"])"
    ]
   },
   {
@@ -175,7 +181,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "litellm.image_generation(model='dall-e-2', prompt=\"cute baby otter\")"
+    "litellm.image_generation(model=\"dall-e-2\", prompt=\"cute baby otter\")"
    ]
   },
   {
@@ -184,7 +190,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "await litellm.aimage_generation(model='dall-e-2', prompt=\"cute baby otter\")"
+    "await litellm.aimage_generation(model=\"dall-e-2\", prompt=\"cute baby otter\")"
    ]
   },
   {
@@ -209,22 +215,26 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "litellm.embedding(model='text-embedding-ada-002', input=[\"good morning from litellm\"])\n",
+    "litellm.embedding(model=\"text-embedding-ada-002\", input=[\"good morning from litellm\"])\n",
     "await litellm.acompletion(\n",
-    "            model=\"gpt-3.5-turbo\",\n",
-    "            messages=[{ \"content\": \"Hello, I want to bake a cake\",\"role\": \"user\"},\n",
-    "                      { \"content\": \"Hello, I can pull up some recipes for cakes.\",\"role\": \"assistant\"},\n",
-    "                      { \"content\": \"No actually I want to make a pie\",\"role\": \"user\"},],\n",
-    "            temperature=0.7,\n",
-    "            max_tokens=20\n",
-    "        )\n",
+    "    model=\"gpt-3.5-turbo\",\n",
+    "    messages=[\n",
+    "        {\"content\": \"Hello, I want to bake a cake\", \"role\": \"user\"},\n",
+    "        {\"content\": \"Hello, I can pull up some recipes for cakes.\", \"role\": \"assistant\"},\n",
+    "        {\"content\": \"No actually I want to make a pie\", \"role\": \"user\"},\n",
+    "    ],\n",
+    "    temperature=0.7,\n",
+    "    max_tokens=20,\n",
+    ")\n",
     "litellm.completion(\n",
-    "            model=\"gpt-3.5-turbo\",\n",
-    "            messages=[{ \"content\": \"Hello, I want to bake a cake\",\"role\": \"user\"},\n",
-    "                      { \"content\": \"Hello, I can pull up some recipes for cakes.\",\"role\": \"assistant\"},\n",
-    "                      { \"content\": \"No actually I want to make a pie\",\"role\": \"user\"},],\n",
-    "            temperature=0.7\n",
-    "        )"
+    "    model=\"gpt-3.5-turbo\",\n",
+    "    messages=[\n",
+    "        {\"content\": \"Hello, I want to bake a cake\", \"role\": \"user\"},\n",
+    "        {\"content\": \"Hello, I can pull up some recipes for cakes.\", \"role\": \"assistant\"},\n",
+    "        {\"content\": \"No actually I want to make a pie\", \"role\": \"user\"},\n",
+    "    ],\n",
+    "    temperature=0.7,\n",
+    ")"
    ]
   },
   {
@@ -249,22 +259,26 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "litellm.embedding(model='text-embedding-ada-002', input=[\"good morning from litellm\"])\n",
+    "litellm.embedding(model=\"text-embedding-ada-002\", input=[\"good morning from litellm\"])\n",
     "await litellm.acompletion(\n",
-    "            model=\"gpt-3.5-turbo\",\n",
-    "            messages=[{ \"content\": \"Hello, I want to bake a cake\",\"role\": \"user\"},\n",
-    "                      { \"content\": \"Hello, I can pull up some recipes for cakes.\",\"role\": \"assistant\"},\n",
-    "                      { \"content\": \"No actually I want to make a pie\",\"role\": \"user\"},],\n",
-    "            temperature=0.7,\n",
-    "            max_tokens=20\n",
-    "        )\n",
+    "    model=\"gpt-3.5-turbo\",\n",
+    "    messages=[\n",
+    "        {\"content\": \"Hello, I want to bake a cake\", \"role\": \"user\"},\n",
+    "        {\"content\": \"Hello, I can pull up some recipes for cakes.\", \"role\": \"assistant\"},\n",
+    "        {\"content\": \"No actually I want to make a pie\", \"role\": \"user\"},\n",
+    "    ],\n",
+    "    temperature=0.7,\n",
+    "    max_tokens=20,\n",
+    ")\n",
     "litellm.completion(\n",
-    "            model=\"gpt-3.5-turbo\",\n",
-    "            messages=[{ \"content\": \"Hello, I want to bake a cake\",\"role\": \"user\"},\n",
-    "                      { \"content\": \"Hello, I can pull up some recipes for cakes.\",\"role\": \"assistant\"},\n",
-    "                      { \"content\": \"No actually I want to make a pie\",\"role\": \"user\"},],\n",
-    "            temperature=0.7\n",
-    "        )"
+    "    model=\"gpt-3.5-turbo\",\n",
+    "    messages=[\n",
+    "        {\"content\": \"Hello, I want to bake a cake\", \"role\": \"user\"},\n",
+    "        {\"content\": \"Hello, I can pull up some recipes for cakes.\", \"role\": \"assistant\"},\n",
+    "        {\"content\": \"No actually I want to make a pie\", \"role\": \"user\"},\n",
+    "    ],\n",
+    "    temperature=0.7,\n",
+    ")"
    ]
   }
  ],
