--- a/python/examples/dspy-rag-fastapi/evaluation/evaluate.ipynb
+++ b/python/examples/dspy-rag-fastapi/evaluation/evaluate.ipynb
@@ -140,11 +140,9 @@
     "from phoenix.trace import DocumentEvaluations, SpanEvaluations\n",
     "\n",
     "# Log the evaluations back to\n",
-    "client.log_evaluations(\n",
-    "    DocumentEvaluations(dataframe=relevance_evals, eval_name=\"relevance\"),\n",
-    "    SpanEvaluations(dataframe=qa_evals, eval_name=\"qa\"),\n",
-    "    SpanEvaluations(dataframe=hallucination_evals, eval_name=\"hallucination\"),\n",
-    ")"
+    "client.log_evaluations(DocumentEvaluations(dataframe=relevance_evals, eval_name=\"relevance\"),\n",
+    "                       SpanEvaluations(dataframe=qa_evals, eval_name=\"qa\"),\n",
+    "                       SpanEvaluations(dataframe=hallucination_evals, eval_name=\"hallucination\"))"
    ]
   }
  ],
