--- a/python/instrumentation/openinference-instrumentation-litellm/guides/client_demo.ipynb
+++ b/python/instrumentation/openinference-instrumentation-litellm/guides/client_demo.ipynb
@@ -145,6 +145,36 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Perform image analysis by providing a url to the image and querying the LLM\n",
+    "litellm.completion(\n",
+    "    model = \"gpt-4o\", \n",
+    "    messages=[\n",
+    "        {\n",
+    "            \"role\": \"user\",\n",
+    "            \"content\": [\n",
+    "                            {\n",
+    "                                \"type\": \"text\",\n",
+    "                                \"text\": \"What’s in this image?\"\n",
+    "                            },\n",
+    "                            {\n",
+    "                                \"type\": \"image_url\",\n",
+    "                                \"image_url\": {\n",
+    "                                \"url\": \"https://upload.wikimedia.org/wikipedia/commons/thumb/d/dd/Gfp-wisconsin-madison-the-nature-boardwalk.jpg/2560px-Gfp-wisconsin-madison-the-nature-boardwalk.jpg\"\n",
+    "                                }\n",
+    "                            }\n",
+    "                        ]\n",
+    "        }\n",
+    "    ],\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# First run pip install tenacity\n",
     "litellm.completion_with_retries(\n",
     "            model=\"gpt-3.5-turbo\",\n",
     "            messages=[{ \"content\": \"What's the highest grossing film ever\",\"role\": \"user\"}]\n",
@@ -175,6 +205,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Image generation using OpenAI\n",
     "litellm.image_generation(model='dall-e-2', prompt=\"cute baby otter\")"
    ]
   },
@@ -185,6 +216,24 @@
    "outputs": [],
    "source": [
     "await litellm.aimage_generation(model='dall-e-2', prompt=\"cute baby otter\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Image generation using Bedrock\n",
+    "# pip install boto3 first before importing\n",
+    "import boto3\n",
+    " \n",
+    "os.getenv('AWS_ACCESS_KEY_ID')\n",
+    "os.getenv('AWS_SECRET_ACCESS_KEY')\n",
+    "os.getenv('AWS_SESSION_TOKEN')\n",
+    "os.getenv('AWS_REGION')\n",
+    "\n",
+    "litellm.image_generation(model='bedrock/stability.stable-diffusion-xl-v1', prompt=\"blue sky with fluffy white clouds and green hills\")"
    ]
   },
   {
