--- a/python/instrumentation/openinference-instrumentation-litellm/guides/client_demo.ipynb
+++ b/python/instrumentation/openinference-instrumentation-litellm/guides/client_demo.ipynb
@@ -22,17 +22,17 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import phoenix as px\n",
-    "import litellm\n",
-    "\n",
-    "from dotenv import load_dotenv\n",
     "import os\n",
+    "\n",
+    "import litellm\n",
+    "import phoenix as px\n",
+    "from dotenv import load_dotenv\n",
     "\n",
     "# Load environment variables from .env file\n",
     "load_dotenv()\n",
     "\n",
     "# Get the secret key from environment variables\n",
-    "openai_api_key = os.getenv('OPENAI_API_KEY')\n",
+    "openai_api_key = os.getenv(\"OPENAI_API_KEY\")\n",
     "\n",
     "\n",
     "session = px.launch_app()\n",
@@ -60,15 +60,15 @@
    "outputs": [],
    "source": [
     "# Add the package path to the system path\n",
-    "import sys\n",
     "import os\n",
+    "import sys\n",
     "\n",
     "# Determine the absolute path to the 'src' directory\n",
-    "package_path = os.path.abspath(os.path.join(os.getcwd(), '..', 'src'))\n",
+    "package_path = os.path.abspath(os.path.join(os.getcwd(), \"..\", \"src\"))\n",
     "\n",
     "# Add the package path to the system path if it's not already included\n",
     "if package_path not in sys.path:\n",
-    "    sys.path.append(package_path)\n"
+    "    sys.path.append(package_path)"
    ]
   },
   {
@@ -85,6 +85,7 @@
    "outputs": [],
    "source": [
     "from openinference.instrumentation.litellm import LiteLLMInstrumentor\n",
+    "\n",
     "LiteLLMInstrumentor().instrument(tracer_provider=tracer_provider)"
    ]
   },
@@ -102,8 +103,9 @@
    "outputs": [],
    "source": [
     "# Simple single message completion call\n",
-    "litellm.completion(model=\"gpt-3.5-turbo\", \n",
-    "                   messages=[{\"content\": \"What's the capital of China?\", \"role\": \"user\"}])"
+    "litellm.completion(\n",
+    "    model=\"gpt-3.5-turbo\", messages=[{\"content\": \"What's the capital of China?\", \"role\": \"user\"}]\n",
+    ")"
    ]
   },
   {
@@ -114,12 +116,14 @@
    "source": [
     "# Multiple message conversation completion call with added param\n",
     "litellm.completion(\n",
-    "            model=\"gpt-3.5-turbo\",\n",
-    "            messages=[{ \"content\": \"Hello, I want to bake a cake\",\"role\": \"user\"},\n",
-    "                      { \"content\": \"Hello, I can pull up some recipes for cakes.\",\"role\": \"assistant\"},\n",
-    "                      { \"content\": \"No actually I want to make a pie\",\"role\": \"user\"},],\n",
-    "            temperature=0.7\n",
-    "        )\n"
+    "    model=\"gpt-3.5-turbo\",\n",
+    "    messages=[\n",
+    "        {\"content\": \"Hello, I want to bake a cake\", \"role\": \"user\"},\n",
+    "        {\"content\": \"Hello, I can pull up some recipes for cakes.\", \"role\": \"assistant\"},\n",
+    "        {\"content\": \"No actually I want to make a pie\", \"role\": \"user\"},\n",
+    "    ],\n",
+    "    temperature=0.7,\n",
+    ")"
    ]
   },
   {
@@ -130,13 +134,15 @@
    "source": [
     "# Multiple message conversation acompletion call with added params\n",
     "await litellm.acompletion(\n",
-    "            model=\"gpt-3.5-turbo\",\n",
-    "            messages=[{ \"content\": \"Hello, I want to bake a cake\",\"role\": \"user\"},\n",
-    "                      { \"content\": \"Hello, I can pull up some recipes for cakes.\",\"role\": \"assistant\"},\n",
-    "                      { \"content\": \"No actually I want to make a pie\",\"role\": \"user\"},],\n",
-    "            temperature=0.7,\n",
-    "            max_tokens=20\n",
-    "        )\n"
+    "    model=\"gpt-3.5-turbo\",\n",
+    "    messages=[\n",
+    "        {\"content\": \"Hello, I want to bake a cake\", \"role\": \"user\"},\n",
+    "        {\"content\": \"Hello, I can pull up some recipes for cakes.\", \"role\": \"assistant\"},\n",
+    "        {\"content\": \"No actually I want to make a pie\", \"role\": \"user\"},\n",
+    "    ],\n",
+    "    temperature=0.7,\n",
+    "    max_tokens=20,\n",
+    ")"
    ]
   },
   {
@@ -147,22 +153,19 @@
    "source": [
     "# Perform image analysis by providing a url to the image and querying the LLM\n",
     "litellm.completion(\n",
-    "    model = \"gpt-4o\", \n",
+    "    model=\"gpt-4o\",\n",
     "    messages=[\n",
     "        {\n",
     "            \"role\": \"user\",\n",
     "            \"content\": [\n",
-    "                            {\n",
-    "                                \"type\": \"text\",\n",
-    "                                \"text\": \"What’s in this image?\"\n",
-    "                            },\n",
-    "                            {\n",
-    "                                \"type\": \"image_url\",\n",
-    "                                \"image_url\": {\n",
-    "                                \"url\": \"https://upload.wikimedia.org/wikipedia/commons/thumb/d/dd/Gfp-wisconsin-madison-the-nature-boardwalk.jpg/2560px-Gfp-wisconsin-madison-the-nature-boardwalk.jpg\"\n",
-    "                                }\n",
-    "                            }\n",
-    "                        ]\n",
+    "                {\"type\": \"text\", \"text\": \"What’s in this image?\"},\n",
+    "                {\n",
+    "                    \"type\": \"image_url\",\n",
+    "                    \"image_url\": {\n",
+    "                        \"url\": \"https://upload.wikimedia.org/wikipedia/commons/thumb/d/dd/Gfp-wisconsin-madison-the-nature-boardwalk.jpg/2560px-Gfp-wisconsin-madison-the-nature-boardwalk.jpg\"\n",
+    "                    },\n",
+    "                },\n",
+    "            ],\n",
     "        }\n",
     "    ],\n",
     ")"
@@ -176,9 +179,9 @@
    "source": [
     "# First run pip install tenacity\n",
     "litellm.completion_with_retries(\n",
-    "            model=\"gpt-3.5-turbo\",\n",
-    "            messages=[{ \"content\": \"What's the highest grossing film ever\",\"role\": \"user\"}]\n",
-    "        )"
+    "    model=\"gpt-3.5-turbo\",\n",
+    "    messages=[{\"content\": \"What's the highest grossing film ever\", \"role\": \"user\"}],\n",
+    ")"
    ]
   },
   {
@@ -187,7 +190,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "litellm.embedding(model='text-embedding-ada-002', input=[\"good morning from litellm\"])"
+    "litellm.embedding(model=\"text-embedding-ada-002\", input=[\"good morning from litellm\"])"
    ]
   },
   {
@@ -196,7 +199,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "await litellm.aembedding(model='text-embedding-ada-002', input=[\"good morning from litellm\"])"
+    "await litellm.aembedding(model=\"text-embedding-ada-002\", input=[\"good morning from litellm\"])"
    ]
   },
   {
@@ -206,7 +209,7 @@
    "outputs": [],
    "source": [
     "# Image generation using OpenAI\n",
-    "litellm.image_generation(model='dall-e-2', prompt=\"cute baby otter\")"
+    "litellm.image_generation(model=\"dall-e-2\", prompt=\"cute baby otter\")"
    ]
   },
   {
@@ -215,7 +218,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "await litellm.aimage_generation(model='dall-e-2', prompt=\"cute baby otter\")"
+    "await litellm.aimage_generation(model=\"dall-e-2\", prompt=\"cute baby otter\")"
    ]
   },
   {
@@ -226,14 +229,16 @@
    "source": [
     "# Image generation using Bedrock\n",
     "# pip install boto3 first before importing\n",
-    "import boto3\n",
-    " \n",
-    "os.getenv('AWS_ACCESS_KEY_ID')\n",
-    "os.getenv('AWS_SECRET_ACCESS_KEY')\n",
-    "os.getenv('AWS_SESSION_TOKEN')\n",
-    "os.getenv('AWS_REGION')\n",
     "\n",
-    "litellm.image_generation(model='bedrock/stability.stable-diffusion-xl-v1', prompt=\"blue sky with fluffy white clouds and green hills\")"
+    "os.getenv(\"AWS_ACCESS_KEY_ID\")\n",
+    "os.getenv(\"AWS_SECRET_ACCESS_KEY\")\n",
+    "os.getenv(\"AWS_SESSION_TOKEN\")\n",
+    "os.getenv(\"AWS_REGION\")\n",
+    "\n",
+    "litellm.image_generation(\n",
+    "    model=\"bedrock/stability.stable-diffusion-xl-v1\",\n",
+    "    prompt=\"blue sky with fluffy white clouds and green hills\",\n",
+    ")"
    ]
   },
   {
@@ -258,22 +263,26 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "litellm.embedding(model='text-embedding-ada-002', input=[\"good morning from litellm\"])\n",
+    "litellm.embedding(model=\"text-embedding-ada-002\", input=[\"good morning from litellm\"])\n",
     "await litellm.acompletion(\n",
-    "            model=\"gpt-3.5-turbo\",\n",
-    "            messages=[{ \"content\": \"Hello, I want to bake a cake\",\"role\": \"user\"},\n",
-    "                      { \"content\": \"Hello, I can pull up some recipes for cakes.\",\"role\": \"assistant\"},\n",
-    "                      { \"content\": \"No actually I want to make a pie\",\"role\": \"user\"},],\n",
-    "            temperature=0.7,\n",
-    "            max_tokens=20\n",
-    "        )\n",
+    "    model=\"gpt-3.5-turbo\",\n",
+    "    messages=[\n",
+    "        {\"content\": \"Hello, I want to bake a cake\", \"role\": \"user\"},\n",
+    "        {\"content\": \"Hello, I can pull up some recipes for cakes.\", \"role\": \"assistant\"},\n",
+    "        {\"content\": \"No actually I want to make a pie\", \"role\": \"user\"},\n",
+    "    ],\n",
+    "    temperature=0.7,\n",
+    "    max_tokens=20,\n",
+    ")\n",
     "litellm.completion(\n",
-    "            model=\"gpt-3.5-turbo\",\n",
-    "            messages=[{ \"content\": \"Hello, I want to bake a cake\",\"role\": \"user\"},\n",
-    "                      { \"content\": \"Hello, I can pull up some recipes for cakes.\",\"role\": \"assistant\"},\n",
-    "                      { \"content\": \"No actually I want to make a pie\",\"role\": \"user\"},],\n",
-    "            temperature=0.7\n",
-    "        )"
+    "    model=\"gpt-3.5-turbo\",\n",
+    "    messages=[\n",
+    "        {\"content\": \"Hello, I want to bake a cake\", \"role\": \"user\"},\n",
+    "        {\"content\": \"Hello, I can pull up some recipes for cakes.\", \"role\": \"assistant\"},\n",
+    "        {\"content\": \"No actually I want to make a pie\", \"role\": \"user\"},\n",
+    "    ],\n",
+    "    temperature=0.7,\n",
+    ")"
    ]
   },
   {
@@ -298,22 +307,26 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "litellm.embedding(model='text-embedding-ada-002', input=[\"good morning from litellm\"])\n",
+    "litellm.embedding(model=\"text-embedding-ada-002\", input=[\"good morning from litellm\"])\n",
     "await litellm.acompletion(\n",
-    "            model=\"gpt-3.5-turbo\",\n",
-    "            messages=[{ \"content\": \"Hello, I want to bake a cake\",\"role\": \"user\"},\n",
-    "                      { \"content\": \"Hello, I can pull up some recipes for cakes.\",\"role\": \"assistant\"},\n",
-    "                      { \"content\": \"No actually I want to make a pie\",\"role\": \"user\"},],\n",
-    "            temperature=0.7,\n",
-    "            max_tokens=20\n",
-    "        )\n",
+    "    model=\"gpt-3.5-turbo\",\n",
+    "    messages=[\n",
+    "        {\"content\": \"Hello, I want to bake a cake\", \"role\": \"user\"},\n",
+    "        {\"content\": \"Hello, I can pull up some recipes for cakes.\", \"role\": \"assistant\"},\n",
+    "        {\"content\": \"No actually I want to make a pie\", \"role\": \"user\"},\n",
+    "    ],\n",
+    "    temperature=0.7,\n",
+    "    max_tokens=20,\n",
+    ")\n",
     "litellm.completion(\n",
-    "            model=\"gpt-3.5-turbo\",\n",
-    "            messages=[{ \"content\": \"Hello, I want to bake a cake\",\"role\": \"user\"},\n",
-    "                      { \"content\": \"Hello, I can pull up some recipes for cakes.\",\"role\": \"assistant\"},\n",
-    "                      { \"content\": \"No actually I want to make a pie\",\"role\": \"user\"},],\n",
-    "            temperature=0.7\n",
-    "        )"
+    "    model=\"gpt-3.5-turbo\",\n",
+    "    messages=[\n",
+    "        {\"content\": \"Hello, I want to bake a cake\", \"role\": \"user\"},\n",
+    "        {\"content\": \"Hello, I can pull up some recipes for cakes.\", \"role\": \"assistant\"},\n",
+    "        {\"content\": \"No actually I want to make a pie\", \"role\": \"user\"},\n",
+    "    ],\n",
+    "    temperature=0.7,\n",
+    ")"
    ]
   }
  ],
