revert unintentional files

--- a/python/instrumentation/openinference-instrumentation-litellm/guides/client_demo.ipynb
+++ b/python/instrumentation/openinference-instrumentation-litellm/guides/client_demo.ipynb
@@ -22,11 +22,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import phoenix as px\n",
-    "import litellm\n",
-    "\n",
-    "from dotenv import load_dotenv\n",
     "import os\n",
+    "\n",
+    "import litellm\n",
+    "import phoenix as px\n",
+    "from dotenv import load_dotenv\n",
     "\n",
     "# Load environment variables from .env file\n",
     "load_dotenv()\n",
@@ -60,8 +60,8 @@
    "outputs": [],
    "source": [
     "# Add the package path to the system path\n",
-    "import sys\n",
     "import os\n",
+    "import sys\n",
     "\n",
     "# Determine the absolute path to the 'src' directory\n",
     "package_path = os.path.abspath(os.path.join(os.getcwd(), \"..\", \"src\"))\n",
@@ -151,6 +151,33 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Perform image analysis by providing a url to the image and querying the LLM\n",
+    "litellm.completion(\n",
+    "    model=\"gpt-4o\",\n",
+    "    messages=[\n",
+    "        {\n",
+    "            \"role\": \"user\",\n",
+    "            \"content\": [\n",
+    "                {\"type\": \"text\", \"text\": \"What’s in this image?\"},\n",
+    "                {\n",
+    "                    \"type\": \"image_url\",\n",
+    "                    \"image_url\": {\n",
+    "                        \"url\": \"https://upload.wikimedia.org/wikipedia/commons/thumb/d/dd/Gfp-wisconsin-madison-the-nature-boardwalk.jpg/2560px-Gfp-wisconsin-madison-the-nature-boardwalk.jpg\"\n",
+    "                    },\n",
+    "                },\n",
+    "            ],\n",
+    "        }\n",
+    "    ],\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# First run pip install tenacity\n",
     "litellm.completion_with_retries(\n",
     "    model=\"gpt-3.5-turbo\",\n",
     "    messages=[{\"content\": \"What's the highest grossing film ever\", \"role\": \"user\"}],\n",
@@ -181,6 +208,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Image generation using OpenAI\n",
     "litellm.image_generation(model=\"dall-e-2\", prompt=\"cute baby otter\")"
    ]
   },
@@ -191,6 +219,26 @@
    "outputs": [],
    "source": [
     "await litellm.aimage_generation(model=\"dall-e-2\", prompt=\"cute baby otter\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Image generation using Bedrock\n",
+    "# pip install boto3 first before importing\n",
+    "\n",
+    "os.getenv(\"AWS_ACCESS_KEY_ID\")\n",
+    "os.getenv(\"AWS_SECRET_ACCESS_KEY\")\n",
+    "os.getenv(\"AWS_SESSION_TOKEN\")\n",
+    "os.getenv(\"AWS_REGION\")\n",
+    "\n",
+    "litellm.image_generation(\n",
+    "    model=\"bedrock/stability.stable-diffusion-xl-v1\",\n",
+    "    prompt=\"blue sky with fluffy white clouds and green hills\",\n",
+    ")"
    ]
   },
   {
