--- a/python/instrumentation/openinference-instrumentation-promptflow/examples/chat_flow_example_to_arize.ipynb
+++ b/python/instrumentation/openinference-instrumentation-promptflow/examples/chat_flow_example_to_arize.ipynb
@@ -41,10 +41,10 @@
    "source": [
     "# Setup OTEL via our convenience function\n",
     "register_otel(\n",
-    "    endpoints=Endpoints.ARIZE,\n",
-    "    space_key=\"INSERT_YOUR_ARIZE_SPACE_KEY_HERE\",  # in app space settings page\n",
-    "    api_key=\"INSERT_YOUR_ARIZE_API_KEY_HERE\",  # in app space settings page\n",
-    "    model_id=\"test-prompt-flow-chat\",  # name this to whatever you would like\n",
+    "    endpoints = Endpoints.ARIZE,\n",
+    "    space_key = \"INSERT_YOUR_ARIZE_SPACE_KEY_HERE\", # in app space settings page\n",
+    "    api_key = \"INSERT_YOUR_ARIZE_API_KEY_HERE\", # in app space settings page\n",
+    "    model_id = \"test-prompt-flow-chat\", # name this to whatever you would like\n",
     ")"
    ]
   },
@@ -129,7 +129,9 @@
     "from promptflow.core import AzureOpenAIModelConfiguration\n",
     "\n",
     "# create the model config to be used in below flow calls\n",
-    "config = AzureOpenAIModelConfiguration(connection=\"open_ai_connection\", azure_deployment=\"gpt-4o\")"
+    "config = AzureOpenAIModelConfiguration(\n",
+    "    connection=\"open_ai_connection\", azure_deployment=\"gpt-4o\"\n",
+    ")"
    ]
   },
   {
