--- a/python/instrumentation/openinference-instrumentation-promptflow/examples/chat_flow_example_to_phoenix.ipynb
+++ b/python/instrumentation/openinference-instrumentation-promptflow/examples/chat_flow_example_to_phoenix.ipynb
@@ -124,7 +124,9 @@
     "from promptflow.core import AzureOpenAIModelConfiguration\n",
     "\n",
     "# create the model config to be used in below flow calls\n",
-    "config = AzureOpenAIModelConfiguration(connection=\"open_ai_connection\", azure_deployment=\"gpt-4o\")"
+    "config = AzureOpenAIModelConfiguration(\n",
+    "    connection=\"open_ai_connection\", azure_deployment=\"gpt-4o\"\n",
+    ")"
    ]
   },
   {
