--- a/python/openinference-instrumentation/examples/tracer.ipynb
+++ b/python/openinference-instrumentation/examples/tracer.ipynb
@@ -14,7 +14,8 @@
     "from opentelemetry.sdk.trace.export import SimpleSpanProcessor\n",
     "from opentelemetry.trace import Status, StatusCode\n",
     "\n",
-    "from openinference.instrumentation import OITracerProvider, TraceConfig\n",
+    "from openinference.instrumentation import TraceConfig\n",
+    "from openinference.instrumentation.config import OITracer\n",
     "from openinference.semconv.resource import ResourceAttributes"
    ]
   },
@@ -26,9 +27,10 @@
    "source": [
     "endpoint = \"http://127.0.0.1:6006/v1/traces\"\n",
     "resource = Resource(attributes={ResourceAttributes.PROJECT_NAME: \"openinference-tracer\"})\n",
-    "tracer_provider = OITracerProvider(wrapped=TracerProvider(resource=resource), config=TraceConfig())\n",
-    "tracer_provider.add_span_processor(SimpleSpanProcessor(OTLPSpanExporter(endpoint)))\n",
-    "tracer = tracer_provider.get_tracer(__name__)"
+    "tracer_provider = TracerProvider(resource=resource)\n",
+    "tracer = tracer_provider.get_tracer(__name__)\n",
+    "tracer = OITracer(wrapped=tracer, config=TraceConfig())\n",
+    "tracer_provider.add_span_processor(SimpleSpanProcessor(OTLPSpanExporter(endpoint)))"
    ]
   },
   {
@@ -51,9 +53,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "with tracer.start_as_current_chain_span(\n",
-    "    \"plain-text-input-plain-text-output\",\n",
-    "    kind=\"chain\",\n",
+    "with tracer.start_as_current_span(\n",
+    "    \"plain-text-mime-type-string-input-string-output\",\n",
+    "    openinference_span_kind=\"chain\",\n",
     ") as span:\n",
     "    span.set_input(\"input\")\n",
     "    span.set_output(\"output\")\n",
@@ -66,22 +68,20 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "with tracer.start_as_current_chain_span(\n",
-    "    \"json-input-json-output\",\n",
+    "with tracer.start_as_current_span(\n",
+    "    \"json-mime-type-string-input-string-output\",\n",
+    "    openinference_span_kind=\"chain\",\n",
     ") as span:\n",
+    "    span.set_input(\n",
+    "        json.dumps({\"input-key\": \"input-value\"}),\n",
+    "        mime_type=\"application/json\",\n",
+    "    )\n",
     "    span.set_output(\n",
     "        json.dumps({\"output-key\": \"output-value\"}),\n",
     "        mime_type=\"application/json\",\n",
     "    )\n",
     "    span.set_status(Status(StatusCode.OK))"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
