--- a/python/openinference-instrumentation/examples/tracer.ipynb
+++ b/python/openinference-instrumentation/examples/tracer.ipynb
@@ -15,7 +15,12 @@
     "from opentelemetry.trace import Status, StatusCode\n",
     "\n",
     "from openinference.instrumentation import TraceConfig\n",
-    "from openinference.instrumentation.config import OITracer\n",
+    "from openinference.instrumentation.config import (\n",
+    "    OITracer,\n",
+    "    get_input_value_and_mime_type,\n",
+    "    get_openinference_span_kind,\n",
+    "    get_output_value_and_mime_type,\n",
+    ")\n",
     "from openinference.semconv.resource import ResourceAttributes"
    ]
   },
@@ -44,7 +49,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Context manager"
+    "### Context Manager"
    ]
   },
   {
@@ -54,7 +59,7 @@
    "outputs": [],
    "source": [
     "with tracer.start_as_current_span(\n",
-    "    \"plain-text-mime-type-string-input-string-output\",\n",
+    "    \"chain-span-with-plain-text-io\",\n",
     "    openinference_span_kind=\"chain\",\n",
     ") as span:\n",
     "    span.set_input(\"input\")\n",
@@ -69,7 +74,7 @@
    "outputs": [],
    "source": [
     "with tracer.start_as_current_span(\n",
-    "    \"json-mime-type-string-input-string-output\",\n",
+    "    \"chain-span-with-json-io\",\n",
     "    openinference_span_kind=\"chain\",\n",
     ") as span:\n",
     "    span.set_input(\n",
@@ -81,6 +86,28 @@
     "        mime_type=\"application/json\",\n",
     "    )\n",
     "    span.set_status(Status(StatusCode.OK))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "with tracer.start_as_current_span(\n",
+    "    \"chain-span-with-attribute-getters\",\n",
+    ") as span:\n",
+    "    span.set_attributes(get_openinference_span_kind(\"chain\"))\n",
+    "    span.set_attributes(get_input_value_and_mime_type(\"input\"))\n",
+    "    span.set_attributes(get_output_value_and_mime_type(\"output\"))\n",
+    "    span.set_status(Status(StatusCode.OK))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Decorator"
    ]
   }
  ],
