--- a/python/openinference-instrumentation/examples/tracer.ipynb
+++ b/python/openinference-instrumentation/examples/tracer.ipynb
@@ -96,9 +96,11 @@
    "source": [
     "with tracer.start_as_current_span(\n",
     "    \"chain-span-with-attribute-getters\",\n",
+    "    attributes={\n",
+    "        **get_openinference_span_kind(\"chain\"),\n",
+    "        **get_input_value_and_mime_type(\"input\"),\n",
+    "    },\n",
     ") as span:\n",
-    "    span.set_attributes(get_openinference_span_kind(\"chain\"))\n",
-    "    span.set_attributes(get_input_value_and_mime_type(\"input\"))\n",
     "    span.set_attributes(get_output_value_and_mime_type(\"output\"))\n",
     "    span.set_status(Status(StatusCode.OK))"
    ]
