--- a/python/openinference-instrumentation/examples/tracer.ipynb
+++ b/python/openinference-instrumentation/examples/tracer.ipynb
@@ -177,6 +177,38 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "def chain_with_decorator_applied_as_function(input: str) -> Dict[str, Any]:\n",
+    "    return {\"output\": \"output\"}\n",
+    "\n",
+    "\n",
+    "decorated = chain(chain_with_decorator_applied_as_function)\n",
+    "decorated(\"input\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def this_name_should_be_overriden_with_decorator_applied_as_function_with_parameters(\n",
+    "    input: str,\n",
+    ") -> Dict[str, Any]:\n",
+    "    return {\"output\": \"output\"}\n",
+    "\n",
+    "\n",
+    "decorated = chain(name=\"decorated-chain-with-decorator-applied-as-function-with-overriden-name\")(\n",
+    "    this_name_should_be_overriden_with_decorator_applied_as_function_with_parameters\n",
+    ")\n",
+    "decorated(\"input\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "@chain\n",
     "async def decorated_async_chain(input: str) -> str:\n",
     "    return \"output\"\n",
