--- a/python/openinference-instrumentation/examples/tracer.ipynb
+++ b/python/openinference-instrumentation/examples/tracer.ipynb
@@ -11,14 +11,13 @@
     "\n",
     "from opentelemetry.exporter.otlp.proto.http.trace_exporter import OTLPSpanExporter\n",
     "from opentelemetry.sdk.resources import Resource\n",
-    "from opentelemetry.sdk.trace import TracerProvider\n",
     "from opentelemetry.sdk.trace.export import ConsoleSpanExporter, SimpleSpanProcessor\n",
     "from opentelemetry.trace import Status, StatusCode, set_tracer_provider\n",
     "\n",
-    "from openinference.instrumentation import TraceConfig\n",
     "from openinference.instrumentation.config import (\n",
-    "    OITracer,\n",
+    "    OpenInferenceTracerProvider,\n",
     "    chain,\n",
+    "    get_current_span,\n",
     "    get_input_value_and_mime_type,\n",
     "    get_openinference_span_kind,\n",
     "    get_output_value_and_mime_type,\n",
@@ -34,11 +33,11 @@
    "source": [
     "endpoint = \"http://127.0.0.1:6006/v1/traces\"\n",
     "resource = Resource(attributes={ResourceAttributes.PROJECT_NAME: \"openinference-tracer\"})\n",
-    "tracer_provider = TracerProvider(resource=resource)\n",
+    "tracer_provider = OpenInferenceTracerProvider(resource=resource)\n",
     "tracer_provider.add_span_processor(SimpleSpanProcessor(OTLPSpanExporter(endpoint)))\n",
     "tracer_provider.add_span_processor(SimpleSpanProcessor(ConsoleSpanExporter()))\n",
     "set_tracer_provider(tracer_provider)\n",
-    "tracer = OITracer(wrapped=tracer_provider.get_tracer(__name__), config=TraceConfig())"
+    "tracer = tracer_provider.get_tracer(__name__)"
    ]
   },
   {
@@ -292,6 +291,23 @@
     "\n",
     "chain_runner = ChainRunner()\n",
     "chain_runner.decorated_chain_method(\"input\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "@chain\n",
+    "def decorated_chain_with_input_and_output_set_inside_the_wrapped_function(input: str) -> str:\n",
+    "    span = get_current_span()\n",
+    "    span.set_input(\"overridden-input\")\n",
+    "    span.set_output(\"overridden-output\")\n",
+    "    return \"output\"\n",
+    "\n",
+    "\n",
+    "decorated_chain_with_input_and_output_set_inside_the_wrapped_function(\"input\")"
    ]
   }
  ],
