--- a/python/openinference-instrumentation/examples/tracer.ipynb
+++ b/python/openinference-instrumentation/examples/tracer.ipynb
@@ -14,6 +14,7 @@
     "from opentelemetry.sdk.trace.export import ConsoleSpanExporter, SimpleSpanProcessor\n",
     "from opentelemetry.trace import Status, StatusCode, set_tracer_provider\n",
     "\n",
+    "from openinference.instrumentation import using_attributes\n",
     "from openinference.instrumentation.config import (\n",
     "    OpenInferenceTracerProvider,\n",
     "    chain,\n",
@@ -21,6 +22,7 @@
     "    get_input_value_and_mime_type,\n",
     "    get_openinference_span_kind,\n",
     "    get_output_value_and_mime_type,\n",
+    "    suppress_tracing,\n",
     ")\n",
     "from openinference.semconv.resource import ResourceAttributes"
    ]
@@ -308,6 +310,82 @@
     "\n",
     "\n",
     "decorated_chain_with_input_and_output_set_inside_the_wrapped_function(\"input\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Suppress Tracing"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "with suppress_tracing():\n",
+    "    with tracer.start_as_current_span(\n",
+    "        \"THIS-SPAN-SHOULD-NOT-BE-TRACED\",\n",
+    "        openinference_span_kind=\"chain\",\n",
+    "    ) as span:\n",
+    "        span.set_input(\"input\")\n",
+    "        span.set_output(\"output\")\n",
+    "        span.set_status(Status(StatusCode.OK))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "@chain\n",
+    "def decorated_chain_with_suppress_tracing(input: str) -> str:\n",
+    "    return \"output\"\n",
+    "\n",
+    "\n",
+    "with suppress_tracing():\n",
+    "    decorated_chain_with_suppress_tracing(\"input\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Context Attributes"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "with using_attributes(session_id=\"123\"):\n",
+    "    with tracer.start_as_current_span(\n",
+    "        \"chain-span-with-context-attributes\",\n",
+    "        openinference_span_kind=\"chain\",\n",
+    "    ) as span:\n",
+    "        span.set_input(\"input\")\n",
+    "        span.set_output(\"output\")\n",
+    "        span.set_status(Status(StatusCode.OK))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "@chain\n",
+    "def decorated_chain_with_context_attributes(input: str) -> str:\n",
+    "    return \"output\"\n",
+    "\n",
+    "\n",
+    "with using_attributes(session_id=\"123\"):\n",
+    "    decorated_chain_with_context_attributes(\"input\")"
    ]
   }
  ],
