--- a/python/openinference-instrumentation/examples/tracer.ipynb
+++ b/python/openinference-instrumentation/examples/tracer.ipynb
@@ -7,8 +7,10 @@
    "outputs": [],
    "source": [
     "import json\n",
+    "from dataclasses import dataclass\n",
     "from typing import Any, Dict\n",
     "\n",
+    "import pydantic\n",
     "from opentelemetry.exporter.otlp.proto.http.trace_exporter import OTLPSpanExporter\n",
     "from opentelemetry.sdk.resources import Resource\n",
     "from opentelemetry.sdk.trace.export import ConsoleSpanExporter, SimpleSpanProcessor\n",
@@ -82,8 +84,7 @@
     "    openinference_span_kind=\"chain\",\n",
     ") as span:\n",
     "    span.set_input(\n",
-    "        json.dumps({\"input-key\": \"input-value\"}),\n",
-    "        mime_type=\"application/json\",\n",
+    "        {\"input-key\": \"input-value\"},\n",
     "    )\n",
     "    span.set_output(\n",
     "        json.dumps({\"output-key\": \"output-value\"}),\n",
@@ -106,6 +107,30 @@
     "    },\n",
     ") as span:\n",
     "    span.set_attributes(get_output_value_and_mime_type(\"output\"))\n",
+    "    span.set_status(Status(StatusCode.OK))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class InputModel(pydantic.BaseModel):\n",
+    "    input: str\n",
+    "\n",
+    "\n",
+    "@dataclass\n",
+    "class OutputModel:\n",
+    "    output: str\n",
+    "\n",
+    "\n",
+    "with tracer.start_as_current_span(\n",
+    "    \"chain-span-with-pydantic-input-and-dataclass-output\",\n",
+    "    openinference_span_kind=\"chain\",\n",
+    ") as span:\n",
+    "    span.set_input(InputModel(input=\"input\"))\n",
+    "    span.set_output(OutputModel(output=\"output\"))\n",
     "    span.set_status(Status(StatusCode.OK))"
    ]
   },
@@ -287,12 +312,12 @@
    "source": [
     "class ChainRunner:\n",
     "    @chain\n",
-    "    def decorated_chain_method(self, input: str) -> str:\n",
+    "    def decorated_chain_method(self, input1: str, input2: str) -> str:\n",
     "        return \"output\"\n",
     "\n",
     "\n",
     "chain_runner = ChainRunner()\n",
-    "chain_runner.decorated_chain_method(\"input\")"
+    "chain_runner.decorated_chain_method(\"input1\", \"input2\")"
    ]
   },
   {
@@ -321,7 +346,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -337,7 +362,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
