--- a/python/openinference-instrumentation/examples/tracer.ipynb
+++ b/python/openinference-instrumentation/examples/tracer.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -20,10 +20,11 @@
     "from openinference.instrumentation.config import (\n",
     "    OpenInferenceTracerProvider,\n",
     "    chain,\n",
-    "    get_current_span,\n",
+    "    get_current_openinference_span,\n",
     "    get_input_value_and_mime_type,\n",
     "    get_openinference_span_kind,\n",
     "    get_output_value_and_mime_type,\n",
+    "    get_tool_attributes,\n",
     "    suppress_tracing,\n",
     ")\n",
     "from openinference.semconv.resource import ResourceAttributes"
@@ -328,7 +329,7 @@
    "source": [
     "@chain\n",
     "def decorated_chain_with_input_and_output_set_inside_the_wrapped_function(input: str) -> str:\n",
-    "    span = get_current_span()\n",
+    "    span = get_current_openinference_span()\n",
     "    span.set_input(\"overridden-input\")\n",
     "    span.set_output(\"overridden-output\")\n",
     "    return \"output\"\n",
@@ -411,6 +412,60 @@
     "\n",
     "with using_attributes(session_id=\"123\"):\n",
     "    decorated_chain_with_context_attributes(\"input\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Tools"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Context Managers"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "with tracer.start_as_current_span(\n",
+    "    \"tool-span\",\n",
+    "    openinference_span_kind=\"tool\",\n",
+    ") as span:\n",
+    "    span.set_input(\"input\")\n",
+    "    span.set_output(\"output\")\n",
+    "    span.set_tool(\n",
+    "        name=\"tool-name\",\n",
+    "        description=\"tool-description\",\n",
+    "        parameters={\"input\": \"input\"},\n",
+    "    )\n",
+    "    span.set_status(Status(StatusCode.OK))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "with tracer.start_as_current_span(\n",
+    "    \"tool-span-with-getter\",\n",
+    "    openinference_span_kind=\"tool\",\n",
+    ") as span:\n",
+    "    span.set_attributes(\n",
+    "        get_tool_attributes(\n",
+    "            name=\"tool-name\",\n",
+    "            description=\"tool-description\",\n",
+    "            parameters={\"input\": \"input\"},\n",
+    "        )\n",
+    "    )\n",
+    "    span.set_status(Status(StatusCode.OK))"
    ]
   }
  ],
