--- a/python/openinference-instrumentation/examples/tracer.ipynb
+++ b/python/openinference-instrumentation/examples/tracer.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -26,6 +26,7 @@
     "    get_output_value_and_mime_type,\n",
     "    get_tool_attributes,\n",
     "    suppress_tracing,\n",
+    "    tool,\n",
     ")\n",
     "from openinference.semconv.resource import ResourceAttributes"
    ]
@@ -466,6 +467,80 @@
     "        )\n",
     "    )\n",
     "    span.set_status(Status(StatusCode.OK))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "@tool\n",
+    "def decorated_tool(input1: str, input2: int) -> None:\n",
+    "    \"\"\"\n",
+    "    tool-description\n",
+    "    \"\"\"\n",
+    "\n",
+    "\n",
+    "decorated_tool(\"input1\", 1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "@tool\n",
+    "async def decorated_tool_async(input1: str, input2: int) -> None:\n",
+    "    \"\"\"\n",
+    "    tool-description\n",
+    "    \"\"\"\n",
+    "\n",
+    "\n",
+    "await decorated_tool_async(\"input1\", 1)  # type: ignore[top-level-await]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "@tool(\n",
+    "    name=\"decorated-tool-with-overriden-name\",\n",
+    "    description=\"overriden-tool-description\",\n",
+    ")\n",
+    "def this_tool_name_should_be_overriden(input1: str, input2: int) -> None:\n",
+    "    \"\"\"\n",
+    "    this tool description should be overriden\n",
+    "    \"\"\"\n",
+    "\n",
+    "\n",
+    "this_tool_name_should_be_overriden(\"input1\", 1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "@tool\n",
+    "def tool_with_changes_inside_the_wrapped_function(input1: str, input2: int) -> str:\n",
+    "    span = get_current_openinference_span()\n",
+    "    print(type(span))\n",
+    "    span.set_input(\"inside-input\")\n",
+    "    span.set_output(\"inside-output\")\n",
+    "    span.set_tool(\n",
+    "        name=\"inside-tool-name\",\n",
+    "        description=\"inside-tool-description\",\n",
+    "        parameters={\"inside-input\": \"inside-input\"},\n",
+    "    )\n",
+    "    return \"output\"\n",
+    "\n",
+    "\n",
+    "tool_with_changes_inside_the_wrapped_function(\"input1\", 1)"
    ]
   }
  ],
