add notes to notebook

--- a/python/openinference-instrumentation/examples/tracer.ipynb
+++ b/python/openinference-instrumentation/examples/tracer.ipynb
@@ -1,6 +1,31 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Notes:\n",
+    "\n",
+    "- imagine `phoenix.otel.register` returns `OpenInferenceTracerProvider`\n",
+    "- imagine there is an `@agent` decorator that behaves the same as `@chain`\n",
+    "- imagine decorators can be also be used from a particular tracer with `@tracer.chain`\n",
+    "- import paths will change\n",
+    "\n",
+    "\n",
+    "Proposed imports:\n",
+    "\n",
+    "```python\n",
+    "from openinference.semconv.trace import (\n",
+    "    get_input_value_and_mime_type,\n",
+    "    get_openinference_span_kind,\n",
+    "    get_output_value_and_mime_type,\n",
+    "    get_tool_attributes,\n",
+    ")\n",
+    "from openinference.instrumentation import tool, chain, OpenInferenceTracerProvider\n",
+    "```"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
